templates/iot/examples/infinispan-10/manual/060-Route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: infinispan
  labels:
    app: infinispan
spec:
  to:
    kind: Service
    name: infinispan
  port:
    targetPort: infinispan
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
